fix book container overflow size

--- a/public/css/librarian/Book-searching.css
+++ b/public/css/librarian/Book-searching.css
@@ -106,7 +106,7 @@
     gap: 10px;
     padding: 20px 50px 10px;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 360px);
+    grid-template-rows: repeat(5, auto);
 }
 .book-container{
     position: relative;
@@ -322,6 +322,7 @@
     background-color: #ffbe76;
     box-shadow: rgba(80, 80, 80, 0.25) 0px 14px 28px, rgba(56, 56, 56, 0.22) 0px 10px 10px;
     display: none;
+    z-index: 50;
 }
 .more-info-panel h4{
     margin: 0;
